Fix layout issues when resizing

--- a/theme/css/mainPage copy.css
+++ b/theme/css/mainPage copy.css
@@ -46,30 +46,10 @@ table {
 	border-spacing: 0;
 }
 
-/* Overrides */
-container {
-  margin-left: 0;
-}
-
-ul.navbar-nav li a {
-  font-size: 1.2em;
-  color: #fff;
-  height: 60px;
-}
-
-ul.navbar-nav li a:hover {
-  color: #5188cd;
-}
-
-ul.navbar-nav > li {
-  display: inline-block;
-}
-
-/***/
 
 /* Misc ----- */
 body {
-    background-color: rgb(229, 229, 229);
+        background-color: rgb(229, 229, 229);
 	font-size:15px;
 	line-height:130%;
 	font-family:'Helvetica Neue', Helvetica, arial, sans-serif;
@@ -111,9 +91,25 @@ body {
 #small_search {
 	font-size:18px;
 }
-
+/*
+#searchButton {
+}
+#searchButton {
+        width: 80px;
+	background-color:#448825;
+	border:4px solid #61a342;
+	display:inline-block;
+	color:#ffffff;
+	font-family:arial;
+	font-size:15px;
+	font-weight:bold;
+	margin-left:10px;
+        margin-right: 10px;
+	text-decoration:none;
+}
+*/
 #searchButton:hover {
-	background-color:#bcd3f2;
+	background-color:#378de5;
 }
 
 #searchButton:active {
@@ -123,7 +119,7 @@ body {
 
 #small_search_string {
         margin-left: 20px;
-        width: 50%;
+        width: 35%;
         height: 30px;
 }
 
@@ -381,10 +377,6 @@ Note sure I really need them  */
 	margin-right: 15px;
 }
 
-#ui-tooltip {
-    border: 1px solid red;
-}
-
 #tooltip1b {
         font-size: 12px;
         color: rgb(15%, 15%, 15%);
@@ -436,9 +428,8 @@ Note sure I really need them  */
     width: 25%;
     min-width: 200px;
     background: white;
-    z-index: 1500;
+    z-index: 3;
     margin-top: 25px;
-    padding: 0;
 }
 
 #sidebar_search {
@@ -448,7 +439,13 @@ Note sure I really need them  */
 
 #sidebar-manage-results {
   padding: 10px 20px;
-  color: #666;
+}
+
+#small_search_string {
+    width: 200px;
+}
+
+#portfolios {
 }
 
 #portfolio_list {
@@ -470,42 +467,40 @@ Note sure I really need them  */
     width: 70%;
 }
 
+
+/* Header ----- */
 #header {
-  width: 100%;
-  -webkit-background-size:cover;
-  -ms-background-size:cover;
-  -moz-background-size:cover;
-  -o-background-size:cover;
-  -khtml-background-size:cover;
-  background-size:cover;
-  background: #5e9ded;
+/*	background:url('../img/bg_header.jpg') no-repeat top center; */
+	
+-webkit-background-size:cover;
+	-ms-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size:cover;
+	-khtml-background-size:cover;
+	background-size:cover;
 
-  color:#fff;
-  height: 60px;
-  left: 0%;
-  margin-top: 25px;
-  padding-left: 25px;
+	
+background: #5e9ded;
+
+	color:#fff;
+/*	padding:30px 0 0; */
+	height: 60px;
+/* make this same as the sidebar width */
+        margin-right: 300px;
+	left: 0%;
+	margin-top: 25px;
+	padding-left: 25px;
 }
-
-#header .logo {
-  display: block;
-  text-align: center;
-  background-color: #29466a;
-  height: 100%;
-}
-
 #header #pricespaid_logo {
-    background-color: black;
 	float:left;
-    margin-right: 30px;
+        margin-right: 30px;
 	background: #294668;
 	width: 250px;
-    height: 100%;
 	padding: 10px;
-    vertical-align: middle;
+        vertical-align: middle;
 }
 #header #pricespaid_logo img {
-    vertical-align: -20px;
+        vertical-align: -20px;
 	height: 30px;
 }
 
@@ -515,42 +510,78 @@ Note sure I really need them  */
 	float:right;
 }
 
-/* This are all computed against the sidebar thickness */
 
-.result-agency, .result-vehicle, .result-vendor {
-    float: left;
-    width: 31%;
-    min-height: 40px;
-    margin-right: 10px;
-    font-size: .80em;
+#logoutLink {
+    position:absolute;
+    margin-top: 15px;
+    right: 0px;
+     margin-right: 500px;
+    font-size: 24px;
+    text-decoration:underline;
+    color: white;
+}
+
+#return_to_search {
+    position:absolute;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-left: 300px;
+    font-size: 24px;
+    text-decoration:underline;
+    color: white;
+}
+
+/* This are all computed against the sidebar thickness */
+#helplink {
+   position:absolute;
+    margin-top: 15px;
+    right: 0px;
+    margin-right: 330px;
+    font-size: 24px;
+    text-decoration:underline;
+    color: white;
 }
 
 .result-agency {
     padding: 1%;
+    float: left;
+    width: 31%;
     border:solid;
     border-width:1px;
     border-color:LightGray;
     background: #fbfbfb;
+    height: 40px;
+    max-height: 40px;
 }
 .agency-name {
     font-weight: bolder;
 }
 .result-vehicle {
     padding: 1%;
+    float: left;
+    width: 31%;
     border:solid;
     border-width:1px;
     border-color:LightGray;
     background: #fbfbfb;
+    height: 40px;
+    max-height: 40px;
 }
 .result-vendor {
     padding: 1%;
+    float: right;
+    width: 31%;
     border:solid;
     border-width:1px;
     border-color:LightGray;
     background: #fbfbfb;
+    height: 40px;
+    max-height: 40px;
 }
 .result-bottom {
     background: #fbfbfb;
+    height: 40px;
+    max-height: 40px;
     margin-top: 10px;
 }
 .result-right {
